refactor: preserve scroll position across zoom